
Changelog for pymta

0.3dev (February 2009)
 - Switch to process-based architecture, got rid of asyncore
 - API documentation is now auto-generated
 - Renamed DefaultMTAPolicy to IMTAPolicy and moved all interfaces to pymta.api

0.2.1 (19.12.2008)
 - wrote documentation
 - bug fixes
    - multiple messages in one SMTP transaction
    - transparency support for lines in the message starting with a dot

0.2 (16.12.2008)
 - initial release
