@@ -2,7 +2,7 @@
 #
 # The MIT License
 # 
-# Copyright (c) 2008 Felix Schwarz <felix.schwarz@oss.schwarz.eu>
+# Copyright (c) 2008-2009 Felix Schwarz <felix.schwarz@oss.schwarz.eu>
 # 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -23,6 +23,8 @@
 # THE SOFTWARE.
 
 from sets import Set
+
+from pymta.api import IMTAPolicy
 
 from tests.util import CommandParserTestCase, DummyAuthenticator
 
@@ -120,12 +122,12 @@ class BasicMessageSendingTest(CommandParserTestCase):
         self.send('RSET')
         self.send('MAIL FROM', 'bar@example.com')
     
-    def test_send_ehlo(self):
+    def test_send_ehlo_without_authenticator(self):
         self.send('EHLO', 'foo.example.com')
         self.assertEqual(2, len(self.command_parser.replies))
         code, reply_text = self.command_parser.replies[-1]
         self.assertEqual(250, code)
-        self.assertEqual(('localhost', 'AUTH PLAIN'), reply_text)
+        self.assertEqual(set(('localhost', 'HELP')), set(reply_text))
     
     def test_ehlo_without_hostname_is_rejected(self):
         self.send('EHLO', expected_first_digit=5)
@@ -144,6 +146,13 @@ class BasicMessageSendingTest(CommandParserTestCase):
         self.send('AUTH PLAIN', base64_credentials, expected_first_digit=5)
         self.assertEqual(3, len(self.command_parser.replies))
         self._check_last_code(535)
+    
+    def test_authenticator_advertises_auth_plain_support(self):
+        self.session._authenticator = DummyAuthenticator()
+        
+        self.send('EHLO', 'foo.example.com')
+        code, reply_texts = self.command_parser.replies[-1]
+        self.assertTrue('AUTH PLAIN' in reply_texts)
     
     def test_auth_plain_with_correct_arguments_is_accepted(self):
         self.session._authenticator = DummyAuthenticator()
@@ -176,5 +185,34 @@ class BasicMessageSendingTest(CommandParserTestCase):
         self.assertEqual(3, len(self.command_parser.replies))
         self._check_last_code(501)
     
-
+    def test_size_restrictions_are_announced_in_ehlo_reply(self):
+        class RestrictedSizePolicy(IMTAPolicy):
+            def max_message_size(self, peer):
+                return 100
+        self.session._policy = RestrictedSizePolicy()
+        
+        self.send('EHLO', 'foo.example.com')
+        code, reply_texts = self.command_parser.replies[-1]
+        self.assertTrue('SIZE 100' in reply_texts)
+    
+    def test_early_rejection_if_size_verb_indicates_big_message(self):
+        class RestrictedSizePolicy(IMTAPolicy):
+            def max_message_size(self, peer):
+                return 100
+        self.session._policy = RestrictedSizePolicy()
+        
+        self.send('EHLO', 'foo.example.com')
+        self.send('MAIL FROM', '<foo@example.com>   size=106530  ', 
+                  expected_first_digit=5)
+        self._check_last_code(552)
+    
+    def test_reject_verbs_for_plain_smtp(self):
+        """Test that SMTP extension verbs are rejected when the connection uses
+        plain SMTP."""
+        self.send('HELO', 'foo.example.com')
+        self.send('MAIL FROM', '<foo@example.com>   size=106530  ', 
+                  expected_first_digit=5)
+        code, reply_text = self.command_parser.replies[-1]
+        self.assertEqual(501, code)
+        self.assertEqual('No SMTP extensions allowed for plain SMTP', reply_text)
 
