@@ -3,6 +3,8 @@ Changelog for pymta
 
 0.3dev (February 2009)
  - Switch to process-based architecture, got rid of asyncore
+ - Support for size-limitations of messages, huge messages will not be stored in
+   memory if they will be rejected anyway (denial of service prevention)
  - API documentation is now auto-generated
  - Renamed DefaultMTAPolicy to IMTAPolicy and moved all interfaces to pymta.api
 
